java_library(
    name = "autofuzz",
    srcs = [
        "AutofuzzCodegenVisitor.java",
        "AutofuzzError.java",
        "FuzzTarget.java",
        "Meta.java",
        "YourAverageJavaClass.java",
        "ClassFiles.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//agent/src/main/java/com/code_intelligence/jazzer/api",
        "//agent/src/main/java/com/code_intelligence/jazzer/utils",
        "@com_github_classgraph_classgraph//:classgraph",
        "@com_github_jhalterman_typetools//:typetools",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_javassist_javassist",
        # "@maven//:log4j_log4j",
        # "@maven//:org_slf4j_slf4j_nop",
    ],
)
